--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ name = "vectrune"
 path = "src/main.rs"
 
 [dependencies]
-axum = "0.7"
+axum = "0.8.8"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -18,12 +18,12 @@ thiserror = "1"
 anyhow = "1"
 clap = { version = "4.5.54", features = ["derive"] }
 csv = "1.4.0"
-quick-xml = { version = "0.36", features = ["serialize"] }
-sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
+quick-xml = { version = "0.39.0", features = ["serialize"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "mysql"] }
 async-recursion = "1.1.1"
 
 [dev-dependencies]
-tower = { version = "0.4", features = ["util"] }
+tower = { version = "0.5.3", features = ["util"] }
 http = "1"
 hyper = "1"
 uuid = { version = "1", features = ["v4"] }
