--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ name = "vectrune"
 path = "src/main.rs"
 
 [dependencies]
+lazy_static = "1.4"
 axum = "0.8.8"
 tokio = { version = "1", features = ["full"] }
 serde_json = "1"
