--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,18 @@ jobs:
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             bin: vectrune
+          - name: linux-x86_64-musl
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            bin: vectrune
+          - name: linux-arm64
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            bin: vectrune
+          - name: linux-armv7
+            os: ubuntu-latest
+            target: armv7-unknown-linux-gnueabihf
+            bin: vectrune
           - name: macos-x86_64
             os: macos-latest
             target: x86_64-apple-darwin
@@ -27,6 +39,10 @@ jobs:
             os: macos-latest
             target: aarch64-apple-darwin
             bin: vectrune
+          - name: windows-x86_64
+            os: windows-latest
+            target: x86_64-pc-windows-msvc
+            bin: vectrune.exe
 
     steps:
       - name: Checkout
