--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rune-runtime"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 authors = ["David Thomas"]
 description = "Vectrune: Structured data in motion."
@@ -16,6 +16,7 @@ lazy_static = "1.4"
 axum = "0.8.8"
 tokio = { version = "1", features = ["full"] }
 serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9.33"
 thiserror = "1"
 anyhow = "1"
@@ -28,6 +29,8 @@ tower-http = { version = "0.6.8", features = ["fs"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 chrono = "0.4.43"
 base64 = "0.22.1"
+async-graphql = "7.0.2"
+async-graphql-axum = "7.0.2"
 
 [dev-dependencies]
 tower = { version = "0.5.3", features = ["util"] }
