--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rune-runtime"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["David Thomas"]
 description = "Vectrune: Structured data in motion."
@@ -31,9 +31,9 @@ chrono = "0.4.43"
 base64 = "0.22.1"
 async-graphql = "7.0.2"
 async-graphql-axum = "7.0.2"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
 [dev-dependencies]
 tower = { version = "0.5.3", features = ["util"] }
 http = "1"
 uuid = { version = "1", features = ["v4"] }
-
