--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "vectrune"
 path = "src/main.rs"
 
 [dependencies]
+indicatif = "0.17"
 lazy_static = "1.4"
 axum = "0.8.8"
 tokio = { version = "1", features = ["full"] }
